@@ -126,7 +126,7 @@ bool DomoticzTCP::ConnectInternal()
 	m_socket = socket(AF_INET, SOCK_STREAM, IPPROTO_TCP);
 	if (m_socket == INVALID_SOCKET)
 	{
-		std::cerr << "could not create a TCP/IP socket!" << std::endl;
+		std::cerr << "Domoticz TCP could not create a TCP/IP socket!" << std::endl;
 		return false;
 	}
 
@@ -137,11 +137,11 @@ bool DomoticzTCP::ConnectInternal()
 	{
 		closesocket(m_socket);
 		m_socket=INVALID_SOCKET;
-		std::cerr << "could not connect to: " << m_szIPAddress << ":" << std::dec << m_usIPPort << std::endl;
+		std::cerr << "Domoticz TCP could not connect to: " << m_szIPAddress << ":" << std::dec << m_usIPPort << std::endl;
 		return false;
 	}
 
-	std::cout << "connected to: " << m_szIPAddress << ":" << std::dec << m_usIPPort << std::endl;
+	std::cout << "Domoticz TCP connected to: " << m_szIPAddress << ":" << std::dec << m_usIPPort << std::endl;
 
 	if (m_username!="")
 	{
