@@ -38,7 +38,7 @@ bool RFXComSerial::StartHardware()
 	//Try to open the Serial Port
 	try
 	{
-		std::cout << "Using serial port: " << m_szSerialPort << std::endl;
+		std::cout << "RFXCOM Using serial port: " << m_szSerialPort << std::endl;
 		open(m_szSerialPort,m_iBaudRate);
 	}
 	catch (boost::exception & e)
