@@ -1,7 +1,8 @@
 Version 1.0.6 (Januari xxth 2013)
 - {SunRise/Set is now calculated on startup and 01:00am}
 - RFXCOM Lan will now keep retrying to connect when it does not succeed on the first time
-- Working on P1 Smart Meter interface, please do not use yet!
+- P1 Smart Meter Serial hardware implemented (need some more work on the graphs)
+- P1 Smart Meter TCP hardware implemented (need some more work on the graphs)
 
 Version 1.0.5 (December 29th 2012)
 - Start of History document
